--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -8,18 +8,26 @@
                 </div>
             </div>
             <br />
-            <form method="post">
+            <form novalidate #form="ngForm" (submit)="onSubmit(form)">
                 <div class="form-floating mb-3">
-                    <input class="form-control" asp-for="username" placeholder="username">
+                    <input class="form-control" name="userName" 
+                    #userName="ngModel" 
+                    [value]="service.formData.userName" 
+                    [(ngModel)]="service.formData.userName" 
+                    [class.invalid]="userName.invalid && userName.touched"
+                    required >
                     <label for="username">Username</label>
-                    <span asp-validation-for="username" class="text-danger"></span>
                 </div>
 
                 <div class="input-group mb-3">
                     <div class="form-floating flex-grow-1">
-                        <input type="password" class="form-control" asp-for="password" placeholder="password">
+                        <input type="password" class="form-control"  name="password" 
+                        #password="ngModel" 
+                        [value]="service.formData.password" 
+                        [(ngModel)]="service.formData.password" 
+                        [class.invalid]="userName.invalid && password.touched"
+                        required >
                         <label for="password">Password</label>
-                        <span asp-validation-for="password" class="text-danger"></span>
                     </div>
                     <span class="input-group-text "><i toggle="#password-field" class="fas fa-fw fa-eye-slash toggle-password"></i></span>
                 </div>
@@ -40,7 +48,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-3">
-                    <button type="submit" class="btn btn-lg btn-primary ">Sign in</button>
+                    <button type="submit" class="btn btn-lg btn-primary" [disabled]="form.invalid">Sign in</button>
                 </div>
                 
             </form>
