--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,6 +4,7 @@
             <div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
                 <div class="d-table-cell align-middle">
 
+                    <app-login-form></app-login-form>
                     
                 </div>
             </div>
